syntax = "proto3";

package gameplay_service;

message HelpWaterRequest {
    string userId = 1;
    string neighborUserId = 2;
}